# aiep-subtitulos

./: .gitignore  CLAUDE.md  README.md  carta-apoyo-directora-innovacion-docente-2026.tex  index.html  overlay.html  package-lock.json  package.json  postulacion-innovacion-docente-2026.md  postulacion-innovacion-docente-2026.tex  postulacion-todo-2026.md  presupuesto-aula-subtitulada-2026.tex  resumen-directora-aula-subtitulada-2026.tex
.github/workflows/: relay-ci.yml  release.yml
carta-word/: carta-apoyo-directora-innovacion-docente-2026.docx
docs/: borrador-formulario-oficial-innovacion-docente-2026.md
docs/kit-audio-docente/: kit-institucional-audio-docente-aiep-osorno.docx
docs/oficiales-concurso-innovacion-docente-2026/: CARTA DE APOYO - Aula Subtitulada AIEP - Director Academico.docx  CARTA DE APOYO - Aula Subtitulada AIEP.docx  CARTA DE APOYO.docx  Formulario Offline Concurso Innovación docente 2026 - Aula Subtitulada AIEP.docx  Formulario Offline Concurso Innovación docente 2026.docx
docs/oficiales-concurso-innovacion-docente-2026/_texto_extraido/: BASES CONCURSO INNOVACIÓN DOCENTE 2026.txt  CARTA DE APOYO.txt  Concurso de Innovación Docente 2026.txt  Formulario Offline Concurso Innovación docente 2026.txt  carta-document.xml  formulario-document.xml
mobile-android/: .gitignore  CLAUDE.md  README.md  build.gradle.kts  release-notes.txt  settings.gradle.kts
mobile-android/.agent/skills/aiep-audio-streaming/: SKILL.md
mobile-android/.agent/skills/aiep-audio-streaming/references/: foreground-service.md  protocol.md  relay-contract.md
mobile-android/app/: build.gradle.kts
mobile-android/app/src/main/: AndroidManifest.xml
mobile-android/app/src/main/assets/: study_template.html
mobile-android/app/src/main/res/drawable/: ic_article_24.xml  ic_launcher_foreground.xml  ic_mic_24.xml  ic_picture_as_pdf_24.xml  ic_qr_scan_24.xml  ic_sessions_24.xml  (+2 more)
resumen-word/: resumen-directora-aula-subtitulada-2026.docx
server/: .gitignore  Dockerfile  README.md  go.mod  hub.go  hub_test.go  main.go  mobile.html
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  relay.rs  whisper.rs
tools/: completar-carta-oficial.cjs  completar-formulario-oficial.cjs  generate-carta-docx.cjs  generate-kit-audio-docs.cjs  generate-resumen-docx.cjs
(+55 files in other folders)
