[package]
name = "aiep-subtitulos"
version = "0.1.0"
description = "Subtitulos flotantes inclusivos para docentes AIEP"
authors = ["AIEP"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aiep_subtitulos_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
futures-util = "0.3"
local-ip-address = "0.6"
rcgen = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
